# beta_iromashka

./: .gitignore
.github/workflows/: build.yml  desktop.yml
android/: ANDROID_DOCS.md  ANDROID_DOCS_2026-05-02.md  SESSION_LOG.md  STORE_METADATA.md  build-release.sh  build.gradle.kts  build.sh  gradle.properties  gradlew  icq20-audit.md  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/smileys/: smiley_map.json
android/app/src/main/java/com/iromashka/: App.kt  IromashkaApp.kt  MainActivity.kt
android/app/src/main/java/com/iromashka/crypto/: BiometricKeystore.kt  Bip39.kt  CryptoManager.kt  GroupCrypto.kt  PasswordCrypto.kt
android/app/src/main/java/com/iromashka/media/: MediaUtils.kt
android/app/src/main/java/com/iromashka/model/: Models.kt  TypingEvent.kt
android/app/src/main/res/drawable/: ic_notification.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
android/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
android/fastlane/metadata/android/en-US/changelogs/: 34.txt
android/fastlane/metadata/android/ru-RU/: full_description.txt  short_description.txt  title.txt
android/fastlane/metadata/android/ru-RU/changelogs/: 34.txt
docs/: STORE_LISTING.md
src/: index.html  manifest.json  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto_mgr.rs  lib.rs  main.rs  transport.rs  ws_client.rs
(+34 files in other folders)
