[package]
name = "iromashka-desktop"
version = "0.1.0"
description = "iRomashka Desktop Messenger"
authors = ["iRomashka"]
edition = "2021"

[lib]
name = "iromashka_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Crypto
chacha20 = "0.9"
sha2 = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
p256 = { version = "0.13", features = ["ecdh"] }
rand = "0.8"
hex = "0.4"
base64 = "0.21"
# Network
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots" ] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
# State
dashmap = "6"
